--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -7,7 +5,11 @@
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
 		{% block header %}
-			<link rel="stylesheet" href="vendor/bootstrap/style.css" />
+			<script src="{{ baseURLnoIndex('scripts/vendor/jquery/external/jquery/jquery.js') }}"></script>
+			<script src="{{ baseURLnoIndex('scripts/vendor/dropzone.js') }}"></script>
+			<link href="{{ baseURLnoIndex ('scripts/vendor/jquery/jquery-ui.css') }} " rel="stylesheet">
+			<link rel="stylesheet" href="{{ baseURLnoIndex('vendor/bootstrap/style.css') }}" />
+			<link href="{{ baseURLnoIndex ('stylesheets/dropzone.css') }}" type="text/css" rel="stylesheet" />
 			<!-- Latest compiled and minified CSS -->
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -22,14 +24,12 @@
 	</head>
 
 <body>
+
 {% block body %}
-
-
-{{the}}
-
-{% endblock %}
-   <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+	{% block menu %}
+<!-- top menu -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -37,60 +37,49 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">ProjecSSt name</a>
+          <a class="navbar-brand" href="#">Project name</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href=" {{ baseURL() }} ">Home</a></li>
+            <li><a href=" {{ baseURL('contact') }} ">Contact</a></li>
+            <li><a href=" {{ baseURL('ajutor') }} ">Ajutor</a></li>
+          </ul>
           <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
+            <a href=" {{ baseURL('adaugasos') }} " class="btn btn-danger">Adauga SOS</a>
+            <input type="text" class="form-control" placeholder="Search...">
+            <a href=" {{ baseURL('adaugasos') }} " class="btn btn-info">Cautare</a>
           </form>
-        </div><!--/.navbar-collapse -->
+        </div>
       </div>
     </nav>
+<!-- end top menu -->
+	{% endblock %}
+<div> .</div>
+<div> .</div>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
+<div class="container-fluid">
+<div class="row">
+<div class="col-sm-12 col-md-12 main">
+	{% block main %}
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
-
-      <hr>
-
-      <footer>
-        <p>&copy; 2015 Company, Inc.</p>
-      </footer>
-    </div> <!-- /container -->
+	
 
 
+	{% endblock %}
+</div>
+</div>
+</div>
 
+
+<!-- example for the variable echoing -->
+<!-- <p> </p> -->
+
+
+{% endblock %}
+ 
+
+ <!-- {{ baseURL('contact') }} -->
 
 
 </body>
